--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ dist
 env.*.js
 !env.example.js
 static/env.js
+
+# Yarn 2 without Zero-Installs
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
