--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^2.18.1"
   },
   "devDependencies": {
+    "@vue/runtime-dom": "latest",
     "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
     "nuxt-purgecss": "^1.0.0",
